2010-10-25  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Improved 'fixbucket' command. Thanks to Srinivasa
	  Moorthy.
	* s3cmd: Read config file even if User Profile directory on 
	  Windows contains non-ascii symbols. Thx Slava Vishnyakov

2010-10-25  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Don't fail when a local node is a directory
	  and we expected a file. (as if for example /etc/passwd 
	  was a dir)

2010-10-25  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/S3.py: Ignore inaccessible (and missing) files
	  on upload.
	* run-tests.py: Extended [sync] test to verify correct
	  handling of inaccessible files.
	* testsuite/permission-tests: New testsuite files.

2010-10-24  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/S3.py: "Stringify" all headers. Httplib should do
	  it but some Python 2.7 users reported problems that should
	  now be fixed.
	* run-tests.py: Fixed test #6

2010-07-25  Aaron Maxwell  <amax@resymbol.net>

	* S3/Config.py, testsuite/etc/brokenlink.png, testsuite/etc/more/linked-dir, testsuite/etc/more/give-me-more.txt, testsuite/etc/linked.png, testsuite/etc/linked1.png, run-tests.py, s3cmd.1, s3cmd:
	  Option to follow local symlinks for sync and put (--follow-symlinks option), including tests and documentation
	* run-tests.py:
	  --bucket-prefix option, to allow different developers to run tests in their own sandbox

2010-07-08  Michal Ludvig  <mludvig@logix.net.nz>

	* run-tests.py, testsuite/crappy-file-name.tar.gz:
	  Updated testsuite, work around a problem with [s3cmd cp]
	  when the source file contains '?' or '\x7f' 
	  (where the inability to copy '?' is especially annoying).

2010-07-08  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/Utils.py, S3/S3Uri.py: Fixed names after moving 
	  functions between modules.

2010-06-29  Timothee Groleau <kde@timotheegroleau.com>

	* S3/ACL.py: Fix isAnonRead method on Grantees
	* ChangeLog: Update name of contributor for Timothee Groleau
